--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Diese Datei wird nur aus Ihrem Album entfernt. Sie können auf diese Datei über die Registerkarte Fotos zugreifen";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Durch das Löschen dieses Albums werden die Dateien aus der Lifebox nicht gelöscht. Sie können auf diese Dateien über die Registerkarte Fotos zugreifen. Sind Sie sicher, dass Sie löschen möchten?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 90 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst. ";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 90 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst. ";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Die ausgewählte(n) Datei(en) wird (werden) in den Papierkorb verschoben (nur synchronisierte Dateien). Innerhalb von 90 Tagen können Sie sie wiederherstellen. Wenn Sie Speicherplatz in Ihrer lifebox freigeben müssen, denken Sie daran, zuerst den Papierkorb zu leeren.";
 "Purchase" = "Kauf";
 "Packages" = "Pakete";
 "Verification code is blocked.\nPlease request a new code" = "Der Bestätigungscode ist blockiert. Bitte fordern Sie einen neuen Code an.";
@@ -2252,10 +2252,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
