--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -6,7 +6,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Este archivo se eliminará solamente su álbum. Puede acceder a este archivo desde la pestaña Fotos";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Al eliminar este este álbum no eliminará los archivos de Lifebox. Puede acceder a estos archivos desde la pestaña Fotos. ¿Está seguro que quiere borrarlo?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Al eliminar este archivo, se eliminarán de Lifebox también. No podrá acceder a ellos una vez eliminados. ¿Está seguro que quiere borrarlo?";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "El o los archivos seleccionados se moverán a la papelera. Podrás restaurarlos en los próximos 90 días. Si necesitas liberar espacio en tu memoria, puedes vaciar la papelera.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Los archivos seleccionados se moverán a la papelera de reciclaje (sólo para copias de seguridad). Podrás restaurarlos en un plazo de 90 días. Si necesitas liberar espacio en tu lifebox, recuerda vaciar primero la papelera de reciclaje.";
 "Purchase" = "Comprar";
 "Packages" = "Paquetes";
 "Verification code is blocked.\nPlease request a new code" = "El código de verificación está bloqueado. Por favor, solicite un nuevo código.";
@@ -2294,10 +2294,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
