--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "ეს ფაილი მხოლოდ შენი ალბომიდან წაიშლება. მასზე წვდომა ფოტოს ტაბიდან იქნება შესაძლებელი.";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "ამ ალბომის წაშლა არ გამოიწვევს მათ გაქრობას lifebox-დან. შენ შეგიძლია მათზე წვდომა ფოტოს ტაბიდან. დარწმუნებული ხარ, რომ გინდა მათი წაშლა?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "მონიშნული ალბომი გადავა სანაგვე ყუთში. შენ მათი აღდგენა შეგეძლება 90 დღის განმავლობაში. გთხოვ, დააცარიელე სანაგვე ურნა, მეტი თავისუფალი ადგილისთვის";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "მონიშნული ფაილები გადავა სანაგვე ყუთში. შენ მათი აღდგენა შეგეძლება 90 დღის განმავლობაში. გთხოვ, დააცარიელე სანაგვე ურნა, მეტი თავისუფალი ადგილისთვის";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "არჩეული ფაილები წაიშლება და იქნება მოთავსებული სანაგვე ურნაში  (მხოლოდ სინქრონიზებული). მათი აღდგენა შეგიძლია 90 დღეში. მეხსიერების გათავისუფლების შემთხვევაში, გთხოვთ დაცალოთ ნაგვის ურნა.";
 "Purchase" = "შეძენა";
 "Packages" = "პაკეტები";
 "Verification code is blocked.\nPlease request a new code" = "ვერიფიკაციის კოდი დაბლოკილია. გთხოვ, მოითხოვო ახალი კოდი";
@@ -2240,10 +2240,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
