--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Acest fișier va fi eliminat doar din album. Îl vei putea accesa din pagina Fotografii.";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Ștergerea albumului nu va elimina fișierele din lifebox. Vei putea accesa aceste fișiere din pagina Forografii. Sigur vrei să-l ștergi?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Albumul selectat va fi eliminat în coșul de gunoi. Le puteți restaura în 90 de zile. Vă rugăm să goliți coșul de gunoi în caz de nevoie pentru a elibera spațiu.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Albumul selectat va fi eliminat în coșul de gunoi. Le puteți restaura în 90 de zile. Vă rugăm să goliți coșul de gunoi în caz de nevoie pentru a elibera spațiu.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Fișierul (fișierele) selectat(e) va (vor) fi mutat(e) în coșul de gunoi (numai fișierele sincronizate). Le veți putea restaura în termen de 90 de zile. Dacă aveți nevoie să eliberați spațiu în lifebox, nu uitați să goliți mai întâi coșul de reciclare.";
 "Purchase" = "Achiziție";
 "Packages" = "Pachete";
 "Verification code is blocked.\nPlease request a new code" = "Codul de verificare este blocat. Solicită un nou cod.";
@@ -2252,10 +2252,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
