--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Файлы будут удалены только из вашего альбома и останутся доступны на вкладке \"Фото\". Вы уверены, что хотите удалить их из альбома?";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Удаление альбома не повлечёт за собой удаление из lifebox файлов, хранящихся в нём. Файлы останутся доступны на вкладках \"Фото\" и \"Видео\".\nВы уверены, что хотите удалить альбом?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Выбранный файл(ы) будет перемещен в корзину. Содержимое можно восстановить в течении 90 дней. Если вам понадобиться освободить память lifebox, не забудьте сначала очистить корзину.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Выбранный файл(ы) будет перемещен в корзину. Содержимое можно восстановить в течении 90 дней. Если вам понадобиться освободить память lifebox, не забудьте сначала очистить корзину.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Выбранный файл(ы) будет перемещен(ы) в корзину (только для резервных копий). В течение 90 дней вы сможете их восстановить. Если вам понадобится освободить место в вашем lifebox, не забудьте сначала очистить корзину.";
 "Purchase" = "Купить";
 "Packages" = "Пакеты";
 "Verification code is blocked.\nPlease request a new code" = "Код подтверждения заблокирован. \nПожалуйста, запросите новый";
@@ -2266,10 +2266,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
