--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Цей файл буде видалено лише з вашого альбому. Ви можете отримати доступ до цього файлу з вкладки \"Фото\"";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Видалення цього альбому не призведе до видалення файлів з lifebox. Ви можете отримати доступ до цих файлів з вкладки \"Фото\". Ви впевнені, що хочете видалити?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Вибрані файли будуть переміщені в корзину. Ви зможете повернути їх протягом 90 днів. Якщо вам потрібно звільнити місце в пам'яті lifebox, не забудьте спочатку очистити корзину.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Вибрані файли будуть переміщені в корзину. Ви зможете повернути їх протягом 90 днів. Якщо вам потрібно звільнити місце в пам'яті lifebox, не забудьте спочатку очистити корзину.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Обраний файл(и) буде переміщений(і) в кошик (тільки для резервних копій). Протягом 90 днів ви зможете їх відновити. Якщо вам знадобиться звільнити місце у вашому lifebox, не забудьте спочатку очистити кошик.";
 "Purchase" = "Покупка";
 "Packages" = "Пакети";
 "Verification code is blocked.\nPlease request a new code" = "Код заблокований. Будь ласка, запитайте новий код";
@@ -2254,10 +2254,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
