--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "لن يحذف هذا الملف إلا من الألبوم. يمكن الوصول إليه من علامة تبويب الصور.";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "لن يؤدي حذف هذا الألبوم إلى إزالة الملفات من لايف بوكس. يمكن الوصول إليها من علامة تبويب الصور. هل أنت متأكد من حذف الألبوم؟";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "سوف تنتقل الملفات المختارة لسلة المهملات. سوف يمكنكم استرجاع ما بداخل سلة المهملات خلال 90 يوما.وإذا لزم فتح مساحة بذاكرة lifebox  فلا تنسى أولا تفريغ ما بسلة المهملات.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "سوف تنتقل الملفات المختارة لسلة المهملات. سوف يمكنكم استرجاع ما بداخل سلة المهملات خلال 90 يوما.وإذا لزم فتح مساحة بذاكرة lifebox  فلا تنسى أولا تفريغ ما بسلة المهملات.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "سيتم نقل الملف (الملفات) المحددة إلى سلة المهملات (الملفات التي تمت مزامنتها فقط). في غضون 90 يومًا ستتمكن من استعادتها. إذا كنت بحاجة إلى إخلاء مساحة في lifebox الخاص بك، يُرجى تذكُّر إفراغ سلة المهملات أولاً.";
 "Purchase" = "شراء";
 "Packages" = "الحزم";
 "Verification code is blocked.\nPlease request a new code" = "حُظِرَ رمز التحقق. يرجى طلب رمز تحقق آخر.";
@@ -2264,10 +2264,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
