--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Ky skedar do të hiqet vetëm nga albumi juaj. Ju mund ta aksesoni këtë skedar nga tab-i i Fotove";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Fshirja e këtij albumi nuk do t'i heqë skedarët nga lifebox. Ju mund t'i aksesoni këto skedarë nga tab-i i Fotove. A jeni i sigurt që dëshironi t'i fshini?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Albumi i pëzgjedhur do të zhvendoset në kosh. Ju mund ta riktheni në 9\n0 ditë. Ju lutem zbrazni koshin në rast se ju duhet të lironi hapsirë.";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Njësitë e pëzgjedhura do të zhvendosen në kosh. Ju mund t'i riktheni në 30 ditë. Ju lutem zbrazni koshin në rast se ju duhet të lironi hapsirë.";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Skedarët(et) e zgjedhur do të zhvendosen(et) në plehra (etëm skedarët(et) e sinkronizuar). Ju do të jeni në gjendje t'i rivendosni ato brenda 90 ditëve. Nëse keni nevojë të lironi hapësirë në lifebox, mos harroni të zbrazni plehrat së pari.";
 "Purchase" = "Blini";
 "Packages" = "Paketa";
 "Verification code is blocked.\nPlease request a new code" = "Kodi i Verifikimit është i bllokuar. Ju lutem, kërkoni një kod të ri.";
@@ -2295,10 +2295,13 @@ then {11,99 TRY/Month}*/
 "security_question_invalid" = "";
 "select_security_question" = "";
 "draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "";
+"delete_popup_title" = "";
+"delete_popup_body" = "";
