--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2274,3 +2274,4 @@ then {11,99 TRY/Month}*/
 "draw_success" = "";
 "delete_popup_title" = "";
 "delete_popup_body" = "";
+"please_enter_your_msisdn" = "";
