--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2262,3 +2262,4 @@ then {11,99 TRY/Month}*/
 "draw_success" = "";
 "delete_popup_title" = "";
 "delete_popup_body" = "";
+"please_enter_your_msisdn" = "";
