--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2221,7 +2221,6 @@ then {11,99 TRY/Month}*/
 "print_file_limit_exceeded_error" = "Превышен лимит фотографий.";
 "order_not_delivered" = "Заказ не Удалось Передать на Печать";
 "order_not_delivered_detail" = "Ваш заказ не удалось передать на печать по техническим причинам. Пожалуйста, отправьте новый заказ на печать еще раз.";
-"grace_banner_paycell_text" = "";
 
 /*Fuzzy*/
 "sync_page_offer_pop_up" = "Нажмите прямо сейчас, чтобы узнать о выгодных пакетах lifebox, предназначенных специально для Вас!";
@@ -2243,8 +2242,12 @@ then {11,99 TRY/Month}*/
 "scan_qr_code_info" = "Отсканируйте QR-код на устройстве, которое вы хотите подключить.";
 "qr_code_try_again" = "Сканирование QR-кода не удалось. Пожалуйста, попробуйте еще раз.";
 "print" = "Печать";
-"photo_max_selection_title" = "Вы Имеете Право на %@ Фотографий";
-"photo_max_selection_body" = "Вы можете отправить на печать не более %@ фотографий.";
+
+/*Fuzzy*/
+"photo_max_selection_title_x" = "Вы Имеете Право на %@ Фотографий";
+
+/*Fuzzy*/
+"photo_max_selection_body_x" = "Вы можете отправить на печать не более %@ фотографий.";
 "set_recovery_mail_success" = "Ваша электронная почта для восстановления была создана.";
 "set_recoverymail_securityquestion_success" = "Ваша электронная почта для восстановления и секретный вопрос были созданы.";
 "settings_set_password_apple_warning" = "Чтобы установить пароль, необходимо войти в lifebox с помощью учетной записи Apple.";
@@ -2255,17 +2258,17 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_body" = "Выберите лучшее из серии фотографий!";
 "print_discover_card_title" = "Пакет Печати";
 "print_discover_card_body" = "Печатайте до 5 фотографий каждый месяц с пакетом печати и получайте их бесплатно прямо на свой адрес.";
-"can_not_sent_otp_sms" = "";
-"invalid_refenrence_code" = "";
-"delete_for_selected" = "";
-"keep_everything" = "";
-"delete_info" = "";
+"can_not_sent_otp_sms" = "Невозможно отправить SMS для получения проверочного кода. Вы можете продолжить работу с электронной почтой, принадлежащей вашему аккаунту.";
+"invalid_refenrence_code" = "Код ссылки недействителен.";
+"delete_for_selected" = "Удалить Выбранное";
+"keep_everything" = "Сохранить Все";
+"delete_info" = "Выберите фотографии, которые вы хотите удалить.";
 "best_scene_discover_card_title" = "Серия Фотографий";
-"forgot_my_password_info" = "";
-"best_photo" = "";
-"security_question_invalid" = "";
-"select_security_question" = "";
-"draw_enddate" = "";
+"forgot_my_password_info" = "Введите адрес электронной почты или номер телефона вашего аккаунта, чтобы продолжить процесс сброса пароля.\nВведите проверочный код на картинке.\nПосле этого на ваш адрес электронной почты будет отправлена ссылка для сброса пароля или на ваш номер телефона будет отправлен код по SMS.";
+"best_photo" = "Ваша Лучшая Фотография!";
+"security_question_invalid" = "Выбранный вами секретный вопрос или ответ неверен.";
+"select_security_question" = "Выберите ранее выбранный вопрос безопасности";
+"draw_enddate" = "Последняя Дата Участия в Лотерее:";
 "draw_detail_button" = "Raffle Details";
 "draw_join" = "Join the Raffle";
 "draw_warning_header" = "You Couldn't Participate in the Raffle";
@@ -2273,7 +2276,10 @@ then {11,99 TRY/Month}*/
 "draw_package_button" = "Go to Packages";
 "draw_already_join" = "You have entered the raffle";
 "draw_detail_header" = "Raffle Details";
-"draw_success" = "";
-"delete_popup_title" = "";
-"delete_popup_body" = "";
-"please_enter_your_msisdn" = "";
+"draw_success" = "Ваша заявка на участие в лотерее успешно завершена. Подробную информацию вы найдете в описании лотереи.";
+"delete_popup_title" = "Выбранные Фотографии Будут Удалены.";
+"delete_popup_body" = "Вы уверены, что хотите удалить фотографии?";
+"please_enter_your_msisdn" = "Пожалуйста, введите свой номер телефона.";
+"grace_banner_paycell_text" = "";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
