--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -4,7 +4,7 @@
 "This file will be removed only from your album. You can access this file from Photos tab" = "Diese Datei wird nur aus Ihrem Album entfernt. Sie können auf diese Datei über die Registerkarte Fotos zugreifen";
 "Deleting this album will not remove the files from lifebox. You can access these files from Photos tab. Are you sure you want to delete?" = "Durch das Löschen dieses Albums werden die Dateien aus der Lifebox nicht gelöscht. Sie können auf diese Dateien über die Registerkarte Fotos zugreifen. Sind Sie sicher, dass Sie löschen möchten?";
 "Deleting this album will remove the files from lifebox. You won't be able to access them once deleted. Are you sure you want to delete?" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 90 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst. ";
-"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Die ausgewählte/-n Datei/-en wird/werden in den Papierkorb verschoben. Du kannst diese innerhalb von 90 Tagen wieder vom Papierkorb zurückholen. Vergiss nicht, den Papierkorb zuerst zu leeren, wenn Du Speicherplatz für Deine Lifebox freigeben willst. ";
+"Deleting these files will remove them from cloud. You won't be able to access them once deleted" = "Die ausgewählte(n) Datei(en) wird (werden) in den Papierkorb verschoben (nur synchronisierte Dateien). Innerhalb von 90 Tagen können Sie sie wiederherstellen. Wenn Sie Speicherplatz in Ihrer lifebox freigeben müssen, denken Sie daran, zuerst den Papierkorb zu leeren.";
 "Purchase" = "Kauf";
 "Packages" = "Pakete";
 "Verification code is blocked.\nPlease request a new code" = "Der Bestätigungscode ist blockiert. Bitte fordern Sie einen neuen Code an.";
@@ -2207,7 +2207,6 @@ then {11,99 TRY/Month}*/
 "print_file_limit_exceeded_error" = "Das Limit für den Fotodruck wurde überschritten.";
 "order_not_delivered" = "Bestellung konnte nicht zum Druck übertragen werden";
 "order_not_delivered_detail" = "Ihre Bestellung konnte aus technischen Gründen nicht zum Druck übertragen werden. Bitte geben Sie einen neuen Druckauftrag auf.";
-"grace_banner_paycell_text" = "";
 
 /*Fuzzy*/
 "sync_page_offer_pop_up" = "Klicken Sie jetzt, um die vorteilhaften lifebox-Pakete zu entdecken, die speziell für Sie bestimmt sind!";
@@ -2229,8 +2228,12 @@ then {11,99 TRY/Month}*/
 "scan_qr_code_info" = "Scannen Sie den QR-Code auf dem Gerät, das Sie verbinden möchten.";
 "qr_code_try_again" = "QR-Code-Scan fehlgeschlagen. Bitte versuchen Sie es erneut.";
 "print" = "Drucken";
-"photo_max_selection_title" = "Sie haben das Recht auf %@ Fotos";
-"photo_max_selection_body" = "Sie können maximal %@ Fotos zum Drucken senden.";
+
+/*Fuzzy*/
+"photo_max_selection_title" = "Sie haben das Recht auf %d Fotos";
+
+/*Fuzzy*/
+"photo_max_selection_body" = "Sie können maximal %d Fotos zum Drucken senden.";
 "set_recovery_mail_success" = "Ihre Wiederherstellungs-E-Mail wurde erstellt.";
 "set_recoverymail_securityquestion_success" = "Ihre Wiederherstellungs-E-Mail und die geheime Frage wurden erstellt.";
 "settings_set_password_apple_warning" = "Sie müssen mit einem Apple-Konto bei lifebox angemeldet sein, um ein Kennwort festzulegen.";
@@ -2241,21 +2244,28 @@ then {11,99 TRY/Month}*/
 "best_scene_discover_card_body" = "Wählen Sie das Beste aus einer Fotoserie aus!";
 "print_discover_card_title" = "Druck-Paket";
 "print_discover_card_body" = "Drucken Sie mit dem Druckpaket jeden Monat bis zu 5 Fotos und lassen Sie sie kostenlos an Ihre Adresse liefern.";
-"can_not_sent_otp_sms" = "";
-"invalid_refenrence_code" = "";
-"delete_for_selected" = "";
-"keep_everything" = "";
-"delete_info" = "";
+"can_not_sent_otp_sms" = "Es kann keine SMS für den Bestätigungscode gesendet werden. Sie können mit der zu Ihrem Konto gehörenden E-Mail fortfahren.";
+"invalid_refenrence_code" = "Der Referenzcode ist ungültig.";
+"delete_for_selected" = "Ausgewählte Löschen";
+"keep_everything" = "Alle Behalten";
+"delete_info" = "Wählen Sie die Fotos aus, die Sie löschen möchten.";
 "best_scene_discover_card_title" = "Fotoserien";
-"forgot_my_password_info" = "";
-"best_photo" = "";
-"security_question_invalid" = "";
-"select_security_question" = "";
-"draw_enddate" = "";
-"draw_detail_button" = "";
-"draw_join" = "";
-"draw_warning_header" = "";
-"draw_warning_body" = "";
-"draw_package_button" = "";
-"draw_already_join" = "";
-"draw_detail_header" = "";
+"forgot_my_password_info" = "Geben Sie die E-Mail-Adresse oder die Telefonnummer Ihres Kontos ein, um mit dem Zurücksetzen des Passworts fortzufahren.\nGeben Sie den Verifizierungscode im Bild ein.\nAnschließend wird ein Link zum Zurücksetzen des Passworts an Ihre E-Mail-Adresse oder ein Code per SMS an Ihre Telefon-Nummer gesendet.";
+"best_photo" = "Ihr Bestes Foto!";
+"security_question_invalid" = "Die von Ihnen gewählte Sicherheitsfrage oder Antwort ist falsch.";
+"select_security_question" = "Wählen Sie die Sicherheitsfrage, die Sie zuvor ausgewählt haben";
+"draw_enddate" = "Letzter Termin für die Teilnahme an der Verlosung:";
+"draw_detail_button" = "Raffle Details";
+"draw_join" = "Join the Raffle";
+"draw_warning_header" = "You Couldn't Participate in the Raffle";
+"draw_warning_body" = "Only those with paid packages can participate in our campaign. Buy a package now and participate in the raffle again.";
+"draw_package_button" = "Go to Packages";
+"draw_already_join" = "You have entered the raffle";
+"draw_detail_header" = "Raffle Details";
+"draw_success" = "Ihr Gewinnspielantrag wurde ausgefüllt. Detaillierte Informationen finden Sie in den Verlosungsdetails.";
+"delete_popup_title" = "Die Ausgewählten Fotos Werden Gelöscht.";
+"delete_popup_body" = "Sind Sie sicher, dass Sie löschen möchten?";
+"please_enter_your_msisdn" = "Bitte geben Sie Ihre Telefon-Nummer ein.";
+"grace_banner_paycell_text" = "";
+"photo_max_selection_title_x" = "";
+"photo_max_selection_body_x" = "";
