--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2244,10 +2244,10 @@ then {11,99 TRY/Month}*/
 "print" = "Печать";
 
 /*Fuzzy*/
-"photo_max_selection_title_x" = "Вы Имеете Право на %@ Фотографий";
+"photo_max_selection_title" = "Вы Имеете Право на %d Фотографий";
 
 /*Fuzzy*/
-"photo_max_selection_body_x" = "Вы можете отправить на печать не более %@ фотографий.";
+"photo_max_selection_body" = "Вы можете отправить на печать не более %d фотографий.";
 "set_recovery_mail_success" = "Ваша электронная почта для восстановления была создана.";
 "set_recoverymail_securityquestion_success" = "Ваша электронная почта для восстановления и секретный вопрос были созданы.";
 "settings_set_password_apple_warning" = "Чтобы установить пароль, необходимо войти в lifebox с помощью учетной записи Apple.";
@@ -2281,5 +2281,5 @@ then {11,99 TRY/Month}*/
 "delete_popup_body" = "Вы уверены, что хотите удалить фотографии?";
 "please_enter_your_msisdn" = "Пожалуйста, введите свой номер телефона.";
 "grace_banner_paycell_text" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"photo_max_selection_title_x" = "";
+"photo_max_selection_body_x" = "";
